--- a/brd-ios/breadwallet/src/Strings/en.lproj/Localizable.strings
+++ b/brd-ios/breadwallet/src/Strings/en.lproj/Localizable.strings
@@ -13,7 +13,7 @@
 /* About screen reddit label */
 "About.reddit" = "Reddit";
 
-/* Terms And Conditions button label */
+/* Terms of Use button label */
 "About.terms" = "Terms And Conditions";
 
 /* About screen title */
@@ -564,6 +564,8 @@
 /* Card number label in add card flow */
 "Buy.CardNumber" = "Card number";
 
+"Buy.CardNumberHint" = "XXXX XXXX XXXX XXXX";
+
 /* Card removal failed error message on delete card flow */
 "Buy.CardRemovalFailed" = "Card removal failed. Please try again.";
 
@@ -578,11 +580,15 @@
 
 "Buy.Country" = "Country";
 
+"Buy.CvvHint" = "XXX";
+
 /* Buy details title */
 "Buy.Details" = "Purchase details";
 
 /* There was an error while processing your payment title in buy failure screen */
 "Buy.ErrorProcessingPayment" = "There was an error while processing your payment";
+
+"Buy.ExpirationDate" = "Expiration date";
 
 /* Failure transaction message on buy  */
 "Buy.FailureTransactionMessage" = "Please contact your card issuer/bank or try again with a different payment method.";
@@ -1042,7 +1048,7 @@
 /* Label for the total balance of all the user's assets (style is all lower case if your language permits) */
 "HomeScreen.totalAssets" = "Total Assets";
 
-/* (Tap here to) swap (your assets for other assets) */
+/* (Tap here to) trade (your assets for other assets) */
 "HomeScreen.trade" = "Swap";
 
 /* Checking private key balance progress view text */
@@ -1376,7 +1382,7 @@
 /* Title for a prompt that asks the user to subscribe to email updates to find out product updates. */
 "Prompts.Email.title" = "Get in the loop";
 
-/* Enable face ID prompt body */
+/* Body text for a prompt that asks the user to subscribe to email updates to find out product updates., Placeholder text for an email address text field., Body text that is shown when the user successfully subscribes to email updates., Text that is displayed as a footnote when the user successfully subscribes to email updates., Title that is shown when the user successfully subscribes to email updates., Title for a prompt that asks the user to subscribe to email updates to find out product updates., Enable face ID prompt body */
 "Prompts.FaceId.body" = "Tap Continue to enable Face ID";
 
 /* Enable face ID prompt title */
@@ -1739,7 +1745,7 @@
 /* Paper Key button description */
 "SecurityCenter.paperKeyDescription" = "The only way to access your assets if you lose or upgrade your phone.";
 
-/* Recovery Phrase button title. This used to be called 'paper key', so leaving the string key as `paperKeyTitle` in order,  * to not break existing client code. */
+/* Recovery Phrase button title. This used to be called 'paper key', so leaving the string key as `paperKeyTitle` in order, * to not break existing client code. */
 "SecurityCenter.paperKeyTitle" = "Recovery Phrase";
 
 /* Paper Key button title */
