feat: handle access denied error

--- a/brd-ios/breadwallet/src/Strings/en.lproj/Localizable.strings
+++ b/brd-ios/breadwallet/src/Strings/en.lproj/Localizable.strings
@@ -64,6 +64,8 @@
 /* Date of birth label in create account */
 "Account.DateOfBirth" = "Date of birth";
 
+"Account.Declined" = "Declined";
+
 /* Delete account option in menu */
 "Account.DeleteAccount" = "Delete account";
 
@@ -88,6 +90,8 @@
 /* Verify your account to get full access to the wallet message */
 "Account.MessageVerifyAccount" = "Verify your account to get full access to your Fabriik wallet!";
 
+"Account.Pending" = "Pending";
+
 /* Account Personal Information title */
 "Account.PersonalInformation" = "Personal Information";
 
@@ -96,6 +100,8 @@
 
 /* Proof of Identity title in add document for kyc2 */
 "Account.ProofOfIdentity" = "Proof of Identity";
+
+"Account.Resubmit" = "Resubmit";
 
 /* Retake photo button on create account */
 "Account.RetakePhoto" = "Retake photo";
@@ -114,6 +120,8 @@
 
 /* Why is the verification declined label in profile screen */
 "Account.VerificationDeclined" = "Why is my verification declined?";
+
+"Account.Verified" = "Verified";
 
 /* Verified account message on profile screen */
 "Account.VerifiedAccountMessage" = "We’ll let you know when your account is verified.";
@@ -228,6 +236,8 @@
 /* Checking for errors label on KYC2 */
 "AccountKYCLevelTwo.CheckingErrors" = "Checking for errors";
 
+"AccountKYCLevelTwo.CompleteLevelOneFirst" = "Please complete Level 1 verification first.";
+
 /* Confirm ID label in KYC2 flow */
 "AccountKYCLevelTwo.ConfirmID" = "We need to confirm your ID";
 
@@ -236,6 +246,8 @@
 
 /* Documents review label in KYC2 */
 "AccountKYCLevelTwo.DocumentsReview" = "We are reviewing your documents and will let you know when your account has been verified.";
+
+"AccountKYCLevelTwo.DrivingLicence" = "Driver’s license";
 
 /* Face capture instructions text on documents for KYC2 */
 "AccountKYCLevelTwo.FaceCaptureInstructions" = "You have captured your entire face in the frame.";
@@ -264,8 +276,14 @@
 /* Make sure before photo label in KYC2 */
 "AccountKYCLevelTwo.MakeSure" = "Make sure you are in a well-lit room";
 
+"AccountKYCLevelTwo.NationalIdCard" = "National ID card";
+
+"AccountKYCLevelTwo.Passport" = "Passport";
+
 /* Prepare documents label in KYC2 */
 "AccountKYCLevelTwo.PrepareDocument" = "Prepare a valid government-issued identity document (Passport, National ID card or Drivers license)";
+
+"AccountKYCLevelTwo.ResidencePermit" = "Residence permit";
 
 /* Select documents  options text label in KYC2 */
 "AccountKYCLevelTwo.SelectOptions" = "Select one of the following options:";
@@ -273,11 +291,31 @@
 /* Sending your data label for verification on KYC2 */
 "AccountKYCLevelTwo.SendingData" = "Sending your data for verification";
 
+"AccountKYCLevelTwo.TakeIdBackPhotoContent" = "Make sure your ID is clear and readable and fits fully in the frame";
+
+"AccountKYCLevelTwo.TakeIdBackPhotoTitle" = "Please take a photo of your ID’s back page";
+
+"AccountKYCLevelTwo.TakeIdFrontPhotoContent" = "Make sure your ID is clear and readable and fits fully in the frame";
+
+"AccountKYCLevelTwo.TakeIdFrontPhotoTitle" = "Please take a photo of your ID’s front page";
+
+"AccountKYCLevelTwo.TakePhotoPassportContent" = "Make sure your passport is clear and readable and fits fully in the frame.";
+
+"AccountKYCLevelTwo.TakePhotoPassportTitle" = "Please take a photo of your passport.";
+
 /* Take photos label in KYC2 */
 "AccountKYCLevelTwo.TakePhotos" = "Be prepared to take a selfie and photos of your ID";
 
+"AccountKYCLevelTwo.TakeSelfieContent" = "Make sure your face is in the frame and it’s clearly visible.";
+
+"AccountKYCLevelTwo.TakeSelfieTitle" = "Please take a selfie";
+
+"AccountKYCLevelTwo.updateLevelOne" = "If your personal information has changed, please first update Level 1 KYC and then continue with\nLevel 2 KYC.";
+
 /* Uploading your photos label in KYC2 flow */
 "AccountKYCLevelTwo.UploadingPhoto" = "Uploading your photos";
+
+"AccountKYCLevelTwo.VerificationPending" = "Unavailable while KYC verification is pending.";
 
 /* Verifying label on KYC2 */
 "AccountKYCLevelTwo.Verifying" = "Verifying you";
@@ -501,6 +539,8 @@
 /* receive button */
 "Button.receive" = "Receive";
 
+"Button.remove" = "Remove";
+
 /* Search button */
 "Button.search" = "Search";
 
@@ -552,6 +592,8 @@
 /* Buy min and max limit text */
 "Buy.BuyLimits" = "Currently, minimum limit for buy is $%@ USD and maximum limit is $%@ USD/day.";
 
+"Buy.BuyLimits.android" = "Currently, minimum limit for buy is $30.00 USD and maximum limit is $500.00 USD per day.";
+
 /* Card label on add card flow */
 "Buy.Card" = "Card";
 
@@ -596,6 +638,8 @@
 /* First Name label in billing address view on buy flow */
 "Buy.FirstName" = "First Name";
 
+"Buy.InvalidExpirationDate" = "Entered expiration date is not valid!";
+
 /* Last Name label in billing address view on buy flow */
 "Buy.LastName" = "Last Name";
 
@@ -620,6 +664,8 @@
 /* Pay with label in buy flow */
 "Buy.PayWith" = "Pay with";
 
+"Buy.ProcessingPayment" = "Processing payment";
+
 /* Purchase success text in purchase details screen  */
 "Buy.PurchaseSuccessText" = "This purchase will appear as ‘Fabriik Wallet’ on your bank statement.";
 
@@ -628,6 +674,8 @@
 
 /* Are you sure you want to remove this card title dialog */
 "Buy.RemoveCard" = "Are you sure you want to remove card ending in";
+
+"Buy.RemoveCard.android" = "Are you sure you want to remove card ending in %s?";
 
 /* You will no longer be able to use it to buy assets description on removing card dialog  */
 "Buy.RemoveCardOption" = "You will no longer be able to use it to buy assets.";
@@ -644,14 +692,21 @@
 /* Select payment method title in buy flow */
 "Buy.SelectPayment" = "Select payment method";
 
+/* Select a payment method button title in buy flow */
+"Buy.SelectPaymentMethod" = "Select a payment method";
+
 /* State/Province label in billing address view on buy flow */
 "Buy.StateProvince" = "State/Province";
 
 /* By placing this order you agree to our terms message when ordering */
 "Buy.Terms" = "By placing this order you agree to our";
 
+"Buy.Terms.android" = "By placing this order you agree to our %s";
+
 /* Try a different payment method button title in failure buy screen */
 "Buy.TryAnotherPayment" = "Try a different payment method";
+
+"Buy.txHashHeader" = "%s Transaction ID";
 
 /* Your order label in buy flow */
 "Buy.YourOrder" = "Your order:";
@@ -844,6 +899,8 @@
 /* Service capabilities description */
 "EME.permissions.paymentRequest" = "Request %1$@ payment";
 
+"ErrorMessages.accessDenied" = "You cannot purchase assets without completing Level 2 account verification. Upgrade your limits on the Profile screen.";
+
 /* The currency amount is to high for exchange. Accepts 2 parameters:, - maxiumum amount, - currency code */
 "ErrorMessages.AmountTooHigh" = "The amount is higher than your daily limit of %s %s. Please enter a lower amount.";
 
@@ -853,7 +910,7 @@
 "ErrorMessages.authorizationFailed" = "Card authorization failed. Please contact your credit card issuer/bank or try another card.";
 
 /* Accepts 3 parameters:, - currency code, - current balance, - (same) currency code */
-"ErrorMessages.balanceTooLow" = "You need %s %s  in your wallet to cover network fees. Please add more %s to your wallet. ";
+"ErrorMessages.balanceTooLow" = "You need %s %s in your wallet to cover network fees. Please add more %s to your wallet. ";
 
 /* Check your internet connection message */
 "ErrorMessages.CheckInternet" = "Please, check your internet connection and try again later.";
@@ -870,6 +927,8 @@
 "ErrorMessages.exchangeFailed" = "Swap failed. Reason: %s.";
 
 "ErrorMessages.ExchangeQuoteFailed" = "We are currently having issues making a swap between this pair of coins. Please try again later.";
+
+"ErrorMessages.Kyc.Underage" = "You must be at least 18 years old to complete Level 1 and 2 verification.";
 
 /* Message that gets shown when we've detected the user has encountered the looping lock-screen bug. (preserve [ ] characters) */
 "ErrorMessages.loopingLockScreen.android" = "Fabriik can not be authenticated due to a bug in your version of Android. [Please tap here for more information.]";
@@ -914,6 +973,8 @@
 
 /* Two parameters:, - maximum amount, - currency code */
 "ErrorMessages.swapAmountTooHigh" = "The amount is higher than the swap maximum of %s %s.";
+
+"ErrorMessages.temporaryNetworkIssues" = "We are having temporary issues connecting to our network. Please try again later.";
 
 /* Fingerprint was not recognized by the scanner, please try scanning again */
 "ErrorMessages.touchIdFailed.android" = "Fingerprint not recognized. Please try again.";
@@ -2174,6 +2235,8 @@
 /* Amount purchased label in detail swap screen */
 "Swap.AmountPurchased" = "Amount purchased";
 
+"Swap.AmountPurchased.android" = "Amount purchased:";
+
 /* Back to Home button */
 "Swap.BackToHome" = "Back to Home";
 
@@ -2183,11 +2246,13 @@
 /* Card fee label in swap details screen */
 "Swap.CardFee" = "Card fee";
 
+"Swap.CardFee.android" = "Card fee:";
+
 /* Title on check your assets popup */
 "Swap.CheckAssets" = "Check your assets!";
 
 /* Text body in check your assets popup */
-"Swap.CheckAssetsBody" = "In order to succesfully perform a swap, make sure you have two or more of our supported swap assets (BSV, BTC, ETH, BCH, SHIB, USDT) activated and funded within your wallet.";
+"Swap.CheckAssetsBody" = "In order to successfully perform a swap, make sure you have two or more of our supported swap assets (BSV, BTC, ETH, BCH, SHIB, USDT) activated and funded within your wallet.";
 
 /* Swap details title */
 "Swap.Details" = "Swap details";
@@ -2207,6 +2272,8 @@
 /* Mining network fee label in swap details screen */
 "Swap.MiningNetworkFee" = "Mining network fee";
 
+"Swap.MiningNetworkFee.android" = "Mining network fee:";
+
 /* Not a valid pair */
 "Swap.NotValidPair" = "Not a valid pair";
 
@@ -2225,6 +2292,8 @@
 /* Receiving fee label on Swap screen */
 "Swap.ReceivingFee" = "Receiving fee\n";
 
+"Swap.RequestTimedOut" = "Your swap request timed out. Please try again.";
+
 /* Select assets title in swap flow */
 "Swap.SelectAssets" = "Select assets";
 
@@ -2241,10 +2310,14 @@
 "Swap.SwapAgain" = "Swap again";
 
 /* Swap min and max limit text */
-"Swap.SwapLimits" = "Currently, minimum limit for swap is $%@ USD and maximum limit is $%@ USD/day.";
+"Swap.SwapLimits" = "Currently, minimum limit for swap is $%s USD and maximum limit is $%s USD/day.";
+
+"Swap.Swapping" = "Swapping %1$s/%2$s";
 
 /* Swap status message on swap flow */
-"Swap.SwapStatus" = "Your %@ is estimated to arrive in 30 minutes. You can continue to use your wallet. We'll let you know when your swap has finished.";
+"Swap.SwapStatus" = "Your %s is estimated to arrive in 30 minutes. You can continue to use your wallet. We'll let you know when your swap has finished.";
+
+"Swap.temporarilyUnavailable" = "Swap is temporarily unavailable";
 
 /* Timestamp label in swap details screen */
 "Swap.Timestamp" = "Timestamp";
@@ -2252,8 +2325,14 @@
 /* Total label in swap details screen */
 "Swap.Total" = "Total:";
 
+"Swap.transactionFrom" = "From %1$s";
+
 /* Transaction ID label in swap details screen */
 "Swap.TransactionID" = "Fabriik Transaction ID";
+
+"Swap.transactionInEthereumNetwork" = "It seems that your transaction takes place in the Ethereum network, please keep in mind that network fees will be charged in ETH";
+
+"Swap.transactionTo" = "To %1$s";
 
 "Symbols.lock" = "\u{1F512}";
 
@@ -2439,8 +2518,20 @@
 /* eg. Starting balance: $50.00 */
 "Transaction.starting" = "Starting balance: %1$@";
 
+"Transaction.swapFromFailed" = "Swap from %s failed";
+
 /* Swapped transaction label */
 "Transaction.Swapped" = "Swapped";
+
+"Transaction.swappedFrom" = "Swapped from %s";
+
+"Transaction.swappedTo" = "Swapped to %s";
+
+"Transaction.swappingFrom" = "Swapping from %s";
+
+"Transaction.swappingTo" = "Swapping to %s";
+
+"Transaction.swapToFailed" = "Swap to %s failed";
 
 /* e.g. "[The money you paid was a] Fee for token transfer: BRD" (BRD is the token that was transfered) */
 "Transaction.tokenTransfer" = "Fee for token transfer: %1$@";
