--- a/brd-ios/breadwallet/src/Strings/en.lproj/Localizable.strings
+++ b/brd-ios/breadwallet/src/Strings/en.lproj/Localizable.strings
@@ -106,6 +106,8 @@
 /* Retake photo button on create account */
 "Account.RetakePhoto" = "Retake photo";
 
+"Account.SelectCountry" = "Select country";
+
 /* Submit your photo for document id title */
 "Account.SubmitPhoto" = "Submit your photo";
 
